--- a/index.html
+++ b/index.html
@@ -95,44 +95,45 @@
     <section class="our-work">
       <div><h2 id="our-work">What We Do</h2>
         <P class="what-we">We champion the rights of the world's 2.3 billion children</P>
-      </div>
-        <div id="card-details">
-          <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-4">
-                <div id="data-card" class="card">
-                    <div class="card-body">
-                      <h5 class="card-title down">9475</h5>
-                      <p class="card-text">Children Supported</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title down">897</h5>
-                      <p class="card-text">Donors</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title down">203</h5>
-                      <p class="card-text">Campaigns Hosted</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title down">5324</h5>
-                      <p class="card-text">Success Stories</p>
-                    </div>
-                </div>
-            </div>
+        </div>  
+    </section>
+    <section class="our-data">
+      <div id="card-details">
+        <div class="row">
+          <div class="col-lg-3 col-md-4 col-sm-4">
+              <div id="data-card" class="card">
+                  <div class="card-body">
+                    <h5 class="card-title down">9475</h5>
+                    <p class="card-text">Children Supported</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-4">
+              <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title down">897</h5>
+                    <p class="card-text">Donors</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-sm-4">
+              <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title down">203</h5>
+                    <p class="card-text">Campaigns Hosted</p>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-3 col-md-4">
+              <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title down">5324</h5>
+                    <p class="card-text">Success Stories</p>
+                  </div>
+              </div>
           </div>
         </div>
-            
+      </div>
     </section>
 
     <!-- ----------------------------- Our Work -------------------------------- -->
