--- a/form.html
+++ b/form.html
@@ -55,7 +55,7 @@
         
         <input type="hidden" name="currency" value="NGN" />
         <input type="hidden" name="meta[token]" value="54" />
-        <input type="hidden" name="redirect_url" value="https://flutterwave.com" /><br>
+        <input type="hidden" name="redirect_url" value="https://kapelar410.github.io/NGO-charity/" /><br>
         <button type="submit" id="start-payment-button" class="btn btn-primary btn-lg">Donate</button>
       </form>
 </div>
