--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <section class="mission">
         <div id="mission">
             <div class="card" >
-                <div class="card-body">
+                <div class="card-body" id="card-body">
                   <h5 class="card-title">Fulfilling Our Mission</h5>
                   <p class="mission-text">Over some years ago, our founder said, “Gracious Giving is often told that its aims are impossible - that there has always been child suffering and there always will be. We know it's impossible only if we make it so. It's impossible only if we refuse to attempt it.”</p>
                   <p class="mission-text">Through the decades, Gracious Giving has continued to give children a better future, and that's still what we do today. 
@@ -100,7 +100,7 @@
     <section class="our-data">
       <div id="card-details">
         <div class="row">
-          <div class="col-lg-3 col-md-4 col-sm-4">
+          <div class="col-lg-3 col-md-4 col-sm-4" id="our-data">
               <div id="data-card" class="card">
                   <div class="card-body">
                     <h5 class="card-title down">9475</h5>
@@ -108,7 +108,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-4">
+          <div class="col-lg-3 col-md-4 col-sm-4" id="our-data">
               <div class="card">
                   <div class="card-body">
                     <h5 class="card-title down">897</h5>
@@ -116,7 +116,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-md-4 col-sm-4">
+          <div class="col-lg-3 col-md-4 col-sm-4" id="our-data">
               <div class="card">
                   <div class="card-body">
                     <h5 class="card-title down">203</h5>
@@ -124,7 +124,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-lg-3 col-md-4">
+          <div class="col-lg-3 col-md-4" id="our-data">
               <div class="card">
                   <div class="card-body">
                     <h5 class="card-title down">5324</h5>
